@@ -1,5 +1,8 @@
 /* Public domain. */
 
+#include <stdio.h>
+#include <stdlib.h>
+
 int main()
 {
 #ifdef NeXT
