@@ -32,7 +32,7 @@ void usage () {
   strerr_die4x(1, "usage: ", progname, USAGE, "\n");
 }
 
-int main (int argc, const char * const *argv, const char * const *envp) {
+int main (int argc, char * const *argv, char * const *envp) {
   int opt;
   unsigned long timeout =TIMEOUT;
   unsigned long sizemax =SIZEMAX;
